--- a/_includes/_partial/post/header.html
+++ b/_includes/_partial/post/header.html
@@ -14,4 +14,5 @@
     <time datetime="{{ item.date }}" itemprop="datePublished"> {{ lang.datepublished }} {{ item.date | date: "%F" }}</time>
     
   </p>
+  <script src="assets/js/mermaid.full.min.js"></script>
 </header>
