--- a/_includes/_partial/head.html
+++ b/_includes/_partial/head.html
@@ -72,5 +72,5 @@
       }
     </style>
     {% endif %}
-    <script src="/assets/js/mermaid.full.min.js"></script>
+    <script src="/assets/js/mermaid.full.min.js" defer="defer"></script>
 </head>
