--- a/_includes/_partial/head.html
+++ b/_includes/_partial/head.html
@@ -73,4 +73,5 @@
     </style>
     {% endif %}
     <script src="/assets/js/mermaid.full.min.js" defer="defer"></script>
+    <script defer="defer">mermaid.initialize({startOnLoad:true});</script>
 </head>
